resolved app-common page blockstack logo at bottom of page on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -133,9 +133,12 @@ h1.hero-head{font-family:'Source Code Pro',monospace;margin-bottom:1.5rem;font-s
 .navbar-brand img{width:164px;position:fixed;bottom:13%;z-index:2000;margin:0 auto;left:0;right:0;}
 .brand-bug{margin-right:1rem;}
 .brand-bug img{width:30px;position:relative;}
+div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand{display:none;}
+div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand.brand-bug{display:block;}
 a.nav-link{color:#fff;font-size:0.8125rem;font-weight:300;margin-top:0.0625rem;}
 a.nav-link:hover,a.nav-link:focus{color:#fff;}
 .nav-item:first-child{margin-left:.625rem;}
+
 
 /* Buttons */
 .btn{font-family:'Source Code Pro',monospace;padding:0.375rem 2.125rem;font-size:0.8125rem;font-weight:400;line-height:1.75rem;border-radius:0;}
@@ -297,21 +300,9 @@ footer > li{list-style:none;}
   .hero-btn{padding-left:0;}
 
   /* Buttons */
-.btn-secondary, .btn-outline-primary {
-  font-size: 0.875rem;
-  padding: 0.6875rem 3.4375rem;
-  line-height: 1.75rem;
-  margin-right: 1.25rem;
-}
-.btn-lg {
-  font-size: 0.875rem;
-  padding: 0.6875rem 3.4375rem;
-  line-height: 1.75rem;
-}
-.btn-block{
-  display: inline-block;
-  width: initial;
-}
+  .btn-secondary,.btn-outline-primary{font-size:0.875rem;padding:0.6875rem 3.4375rem;line-height:1.75rem;margin-right:1.25rem;}
+  .btn-lg{font-size:0.875rem;padding:0.6875rem 3.4375rem;line-height:1.75rem;}
+  .btn-block{display:inline-block;width:initial;}
 
   /* Feature Image Top */
   .feat-img-top > p{font-size:14px;}
@@ -321,6 +312,8 @@ footer > li{list-style:none;}
   .brand-bug{display:none;}
   .navbar-brand{margin-right:2.5rem;margin-top:0.5rem;}
   .navbar-brand img{position:relative;}
+  div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand{display:block;}
+  div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand.brand-bug{display:none;}
   .nav-item:first-child{margin-left:.875rem;}
   .navbar-nav .nav-item+.nav-item{margin-left:1.375rem;}
   a.nav-link{padding-right:5px;padding-left:5px;}
